# risk-assistant

./: .dockerignore  .gitignore  PORTFOLIO.md  README.md  install-extensions.ps1  package.json  portfolio.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.ps1  system-prompt.txt
.github/: copilot-instructions.md
ai/: risk-guardrail.system-prompt.txt
examples/: system.example.yaml
infrastructure/: README.md  backend.Dockerfile  compose.dev.yaml  compose.yaml  frontend.Dockerfile  podman.ps1
model/: model.manifest.yaml
model/controls/: controls.catalog.yaml  controls.links.yaml
model/questions/: ai.questions.yaml  base.questions.yaml  cost.questions.yaml  criticality.questions.yaml  data.questions.yaml  integration.questions.yaml  operations.questions.yaml  security.questions.yaml
model/rules/: controls.rules.yaml  triggers.rules.yaml
prompts/: human-prompt.md  risk-guardrail.system-prompt.txt
scripts/: install-extensions.ps1  setup.ps1  update.ps1
systems/: New-Test.yaml  RW-2.yaml  Test-2.yaml  TestMe.yaml
tools/: riskctl.py  riskctl.ts
web/: .dockerignore  .gitignore  README.md  biome.json  next.config.ts  package-lock.json  package.json  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/docs/: page.tsx
web/src/components/: AddExistingSystemForm.tsx  FileBrowserModal.tsx  NewSystemForm.tsx  SystemEditor.tsx  SystemManagement.tsx
web/src/hooks/: useSystemApi.ts
web/src/lib/: apiClient.ts  constants.ts  evaluator.ts  formatting.ts  model.ts  modelIndex.ts  portfolio.ts  repoRoot.ts  schemas.ts  storage.ts  (+2 more)
(+45 files in other folders)
